First commit before adding media profiles

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,3 +1,12 @@
+
+.welcomeHeading {
+  margin: 2% 0;
+}
+
+.aboutP {
+  border-bottom: 1px dashed black;
+}
+
 .home {
 
   .content-section {
@@ -45,6 +54,8 @@
     img {
       border-radius: 10px;
     }
+
+    
   }
 
   .content-pick {
@@ -56,6 +67,13 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      display: flex;
+      flex-direction: column;
+
+      .btn {
+        .button(2rem, white, #008B8B
+        )
+      }
     }
   }
 }// home
