--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,13 @@
 // Mixins in here
+
+.button(@fontSize, @fontColor, @bkgColor) {
+    text-align: center;
+    font-size: @fontSize;
+    color: @fontColor;
+    background-color: @bkgColor;
+    border: 1px solid grey;
+    padding: 5% 0;
+    border-radius: 10px;
+    width: 90%;
+
+}
