--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,11 @@
 // Follow the order in the readme
+
+// vars and mixins //
+
+@import "variables";
+@import "mixins";
+@import "reset";
+@import "global";
+@import "navigation";
+@import "footer";
+@import "home-page";
