--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,28 @@
 // Navigation Styles here
+
+nav {
+    display: flex;
+    width: 100%;
+    border-bottom: 2px dashed silver;
+   
+
+    .funBus {
+        margin: 2%;
+        font-weight: bold;
+    }
+
+    .links {
+        display: flex;
+        justify-content: flex-end;
+        width: 75%;
+        
+        
+
+        div {
+            font-size: 1.5rem;
+            margin: 4%;
+            font-weight: bold;
+        }
+    }
+
+}
