--- a/less/home-page.less
+++ b/less/home-page.less
@@ -76,4 +76,65 @@
       }
     }
   }
+
+  
+  
 }// home
+
+@media @phone {
+
+  .topPic {
+    display: flex;
+    justify-content: center;
+  }
+
+  .topPic img{
+    width: 95%;
+  }
+
+  .welcomeHeading {
+    margin: 3%;
+  }
+
+  .aboutP {
+    margin: 3%
+  }
+
+  .home .content-section .text-content {
+
+    width: 98%;
+    margin: 0 3%;
+  }
+
+  .home .content-section .img-content {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+
+  }
+  .content-section {
+    flex-direction: column;
+ 
+   
+  }
+
+  .home .inverse-content {
+    flex-direction: column-reverse;
+  }
+
+  .home .content-pick {
+    flex-direction: column;
+    width: 100%;
+    margin: 3%;
+  }
+
+  .home .content-destination {
+    width: 93%;
+  }
+
+  .home .content-pick .destination {
+    width: 98%;
+    padding: 1% 8%;
+  }
+  
+}
