--- a/less/navigation.less
+++ b/less/navigation.less
@@ -26,3 +26,21 @@ nav {
     }
 
 }
+
+@media @phone {
+    nav {
+        flex-direction: column;
+    
+        .links {
+            display: flex;
+            justify-content: space-around;
+            width: 100%;
+        }
+    
+    }
+    .funBus {
+        text-align: center;
+    }
+
+        
+}
