--- a/css/index.css
+++ b/css/index.css
@@ -187,6 +187,19 @@ nav .links div {
   margin: 4%;
   font-weight: bold;
 }
+@media (max-width: 500px) {
+  nav {
+    flex-direction: column;
+  }
+  nav .links {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
+  .funBus {
+    text-align: center;
+  }
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -261,4 +274,46 @@ nav .links div {
   padding: 5% 0;
   border-radius: 10px;
   width: 90%;
+}
+@media (max-width: 500px) {
+  .topPic {
+    display: flex;
+    justify-content: center;
+  }
+  .topPic img {
+    width: 95%;
+  }
+  .welcomeHeading {
+    margin: 3%;
+  }
+  .aboutP {
+    margin: 3%;
+  }
+  .home .content-section .text-content {
+    width: 98%;
+    margin: 0 3%;
+  }
+  .home .content-section .img-content {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+  .content-section {
+    flex-direction: column;
+  }
+  .home .inverse-content {
+    flex-direction: column-reverse;
+  }
+  .home .content-pick {
+    flex-direction: column;
+    width: 100%;
+    margin: 3%;
+  }
+  .home .content-destination {
+    width: 93%;
+  }
+  .home .content-pick .destination {
+    width: 98%;
+    padding: 1% 8%;
+  }
 }
